# api-test

./: .env.example  .gitignore  README.md  notes.txt  project-purpose.md  psql_query.sh  pyproject.toml  requirements.txt  simple_test.sh  test_user_services.sh  user-service-implementation-plan.md
agents/shared/: schemas.py
agents/specialists/: users_query_agent.py
agents/tools/: user_query_tools.py
alembic/: env.py
alembic/versions/: ea93a95f8f4d_create_users_table.py
app/: dependencies.py  main.py
app/api/v1/: exception_handlers.py  router.py
app/api/v1/routes/: agents.py  health.py  users.py
app/api/v1/schemas/: agent_schemas.py  error_schemas.py  user_schemas.py
app/config/: config_manager.py  database.py  settings.py
app/core/: exceptions.py  logging.py  uow.py
app/models/entities/: base.py  user.py
app/repositories/: base.py  user_repository.py
app/services/: base_service.py  user_management_service.py  user_service.py  users_nl_query_service.py
scripts/: check_google_key.sh  check_llm_key.sh  create_user.sh  query_users_nl.sh
tests/: conftest.py
tests/integration/: test_user_api.py  test_user_endpoints.py  test_users_nl_query_api.py
tests/unit/: test_user_query_tools.py  test_user_repository.py  test_user_service.py  test_user_validation.py  test_users_nl_query_service.py
